# python-testing

pytest-framework/my_project/: .gitignore  README.md  pyproject.toml  pytest.ini  pytest_explanations.md
pytest-framework/my_project/src/calculator/: __init__.py  advanced_operations.py  basic_operations.py
pytest-framework/my_project/src/calculator/utils/: __init__.py  validators.py
pytest-framework/my_project/tests/: __init__.py  conftest.py  pytest.ini
pytest-framework/my_project/tests/integration/: __init__.py  test_calculator_integration.py
pytest-framework/my_project/tests/unit/: __init__.py  test_advanced_operations.py  test_basic_operations.py  test_validators.py
unittest-framework/mock/basics/: magic_mock_demo.py  magic_with_spec.py  test_mock_with_patch.py
unittest-framework/mock/mock-example/: test_user_service.py  user_service.py
unittest-framework/one/: README.md  calculator.py
unittest-framework/two/: README.md  calculator.py  test_calculator.py
